# GenAI-project

./: 01.ipynb  Numpy_01.ipynb  Trending_news_generator.ipynb
P1_ASKMYPDF/: AskMyPdf.py  README.md
P2_ChatTerminal (mini cursor)/: README.md  graph.py  speech_module.py  summerizer.py  text_to_speech.py  to_do.py
P3_AiResumeRoaster/Resume_roaster/app/queue/: workers copy.py
P3_AiResumeRoaster/backend/: requirements.txt
P3_AiResumeRoaster/backend/app/queue/: workers.py
P3_AiResumeRoaster/frontend/: index.html  package-lock.json  package.json
P3_AiResumeRoaster/frontend/src/: App.jsx  index.css
P3_AiResumeRoaster/frontend/src/api/: fileApi.js
P3_AiResumeRoaster/frontend/src/components/: FileUpload.jsx
P4_smart_scheduler_ai/: .gitignore  README.md  credentials.example.json  pyproject.toml  requirements.txt  summerizer.py  tools.py  tts.py  tts_openai.py
