[project]
name = "ai-meeting-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-google-community>=2.0.7",
    "langgraph>=0.4.8",
    "openai>=1.88.0",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.98",
]
